assets/styles/index.css
/* ... */
@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav {
		padding-left: initial;
		padding-right: initial;
		top: calc(-1 * var(--nav--scroll));
	}
}

body > main > nav > section:first-child {
	flex-shrink: 0;
	height: var(--logo--height--scaled);
	margin-bottom: calc(var(--tagline--height) + var(--margin));
	margin-top: var(--nav--scroll);
	position: sticky;
	top: var(--margin);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:first-child {
		margin-bottom: calc(100vh - var(--logo--height--scaled) - var(--tagline--height) - var(--margin) * 3);
	}
}

body > main > nav > section:first-child > h1 {
	--typography--leading: calc(5/6);
	--typography--size: 8.8rem;
	--transition--duration: 100ms;
	align-items: start;
	display: flex;
	flex-direction: column;
	position: absolute;
	transform-origin: 0px -0.025em;
	transform: scale(calc(1 - (1 - var(--logo--scale)) * var(--logo--scroll)));
	transition-delay: calc(var(--color--transition) / 4), 0ms;
	transition-duration: calc(var(--color--transition) / 2), var(--transition--duration);
	transition-property: color, transform;
	transition-timing-function: linear;
	will-change: transform;
}

@media (max-width: 23.375em) {
	body > main > nav > section:first-child > h1 {
		--typography--size: 8rem;
	}
}

@media (min-width: 35.5em) {
	body > main > nav > section:first-child > h1 {
		--typography--size: 7.2rem;
	}
}

@media (min-width: 48em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:first-child > h1 {
		--typography--size: 12.4rem;
		--transition--duration: 50ms;
	}
}

@media (min-width: 64em) {
	body > main > nav > section:first-child > h1 {
		--typography--size: 13.2rem;
	}
}

body > main > nav > section:first-child > h1 > a {
	--link--outline--override: calc((1 + (var(--logo--scale) * var(--logo--scroll))) * var(--link--outline));
	border-bottom: initial;
	border-top: initial;
	color: var(--color);
	margin-bottom: initial;
	margin-top: initial;
	pointer-events: none;
	position: relative;
	transition: color calc(var(--color--transition) / 2) linear;
}

body > main > nav > section:first-child > h1 > a:before {
	content: "";
	display: block;
	height: 100%;
	pointer-events: auto;
	position: absolute;
	width: 100%;
}

body > main > nav > section:first-child > h1 [href="#art"] .a {
	letter-spacing: -0.04em;
}

body > main > nav > section:first-child > h1 [href="#media"] .m {
	letter-spacing: -0.04em;
}

body > main > nav > section:first-child > h1 [href="#media"] .d {
	letter-spacing: 0.02em;
}

body > main > nav > section:first-child > h1 [href="#science"] .s {
	letter-spacing: -0.01em;
}

body > main > nav > section:first-child > h1 [href="#science"] .i {
	letter-spacing: -0.015em;
}

body > main > nav > section:first-child > h1 [href="#science"] .n {
	letter-spacing: -0.02em;
}

body > main > nav > section:first-child > h1 [href="#science"] .e {
	letter-spacing: -0.02em;
}

body > main > nav > section:last-child {
	bottom: var(--margin);
	display: flex;
	flex-shrink: 0;
	position: sticky;
}

body > main > nav > section:last-child > a > p {
	--typography--size: 2.4rem;
	--typography--leading: 1;
}

@media (min-width: 48em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:last-child > a > p {
		--typography--size: 3.6rem;
	}
}

body > main > section {
	--section--spacing: calc((100vh - var(--logo--height--scaled) - var(--tagline--height) - var(--margin) * 3) / 2);
	--nouns--spacing: calc(var(--margin) * 4);
	--nouns--height: calc(100vh - var(--logo--height--scaled) - var(--tagline--height) - var(--margin) * 5 - var(--nouns--spacing) - 0.8rem);
	padding-bottom: var(--nouns--spacing);
	padding-left: var(--margin);
	padding-right: var(--margin);
	padding-top: var(--section--spacing);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > section {
		--section--spacing: calc(var(--logo--height) - var(--logo--height--scaled) + var(--margin) / 2);
		--nouns--height: calc(100vh - var(--tagline--height) - var(--margin) * 2 - var(--nouns--spacing));
		grid-column: 2;
		grid-row: 2;
		padding-bottom: calc(var(--nouns--spacing) + var(--tagline--height) + var(--margin));
		padding-left: initial;
		padding-right: initial;
	}
}

body > main > section #art,
body > main > section #media,
body > main > section #science {
	min-height: var(--nouns--height);
}

body > main > section #media,
body > main > section #science {
	margin-top: var(--nouns--spacing);
}

body > footer > aside {
	--nav--scroll--offset: calc(var(--tagline--height) + var(--margin) * 2 - 0.2rem);
	margin-bottom: calc(-1 * var(--margin));
	padding-bottom: var(--margin);
	padding-left: var(--margin);
	padding-right: var(--margin);
	position: sticky;
	top: var(--nav--scroll--offset);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > aside {
		display: flex;
		flex-direction: column;
		justify-content: end;
		padding: initial;
		position: initial;
		top: initial;
	}
}

body > footer > aside > ul {
	--typography--size: 2.4rem;
	--typography--leading: 1;
	align-items: start;
	display: flex;
	flex-direction: column;
	gap: var(--typography--between);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > aside > ul {
		bottom: var(--margin);
		margin-top: var(--margin);
		position: sticky;
	}
}

@media (min-width: 48em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > aside > ul {
		--typography--size: 3.6rem;
	}
}

body > footer > section {
	margin-top: calc(var(--margin) * 4);
	padding-bottom: var(--margin);
	padding-left: var(--margin);
	padding-right: var(--margin);
}
/* ... */

